Increase spacing around 3D model and fix scroll arrow animation

--- a/css/style.css
+++ b/css/style.css
@@ -303,6 +303,7 @@ body {
   position: relative;
   z-index: 2;
   opacity: 0.9;
+  margin: 0 80px;
   flex-shrink: 0;
 }
 
